--- a/client_list_submit_delete.html
+++ b/client_list_submit_delete.html
@@ -43,28 +43,17 @@
   <!-- /navbar-inner --> 
 </div>
 <!-- /navbar -->
-<div class="subnavbar">   
+<div class="subnavbar">
   <div class="subnavbar-inner">
     <div class="container">
       <ul class="mainnav">
-          <li><a href="proyek_list.html"><i class="icon-road"></i><span>Proyek</span></a></li>
-          <li><a href="karyawan_list.html"><i class="icon-user"></i><span>Karyawan</span></a></li>
-          <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-male"></i><span>Manajemen User</span> <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="pengguna.html">Pengguna</a></li>
-                <li><a href="wajib_pajak.html">Data Wajib Pajak Pribadi & Badan</a></li>
-                <li><a href="user_level.html">User Level</a></li>
-                      <!-- <li><a href="login.html">Login</a></li>
-                      <li><a href="signup.html">Signup</a></li>
-                      <li><a href="error.html">404</a></li> -->
-              </ul>
-          </li>
-          <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-bar-chart"></i><span>Laporan</span> <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                  <li><a href="pembelian_list.html">Pembelian</a></li>
-                  <li><a href="penjualan_list.html">Penjualan</a></li>
-              </ul>
-          </li>
+        <li><a href="vendor_list.html"><i class="icon-dashboard"></i><span>Vendor</span> </a> </li>
+        <li class="active"><a href="client_list.html"><i class="icon-list-alt"></i><span>Client</span> </a> </li>
+        <li><a href="barang_list.html"><i class="icon-suitcase"></i><span>Barang</span> </a></li>
+        <li><a href="pembelian_list.html"><i class="icon-bar-chart"></i><span>Pembelian</span> </a> </li>
+        <li><a href="penjualan_list.html"><i class="icon-code"></i><span>Penjualan</span> </a> </li>
+        <li><a href="proyek_list.html"><i class="icon-road"></i><span>Proyek</span></a></li>
+        <li><a href="karyawan_list.html"><i class="icon-user"></i><span>Karyawan</span></a></li>
       </ul>
     </div>
     <!-- /container --> 
@@ -75,6 +64,7 @@
 <div class="main">
   <div class="main-inner">
     <div class="container">
+      <p id="notice_info" class="bg-danger pad-10 text-center">Data berhasil dihapus</p>
       <div class="row">
         <div class="span2">
           <div class="widget">
@@ -84,34 +74,16 @@
             <!-- /widget-header -->
             <div class="widget-content">
               <div class="shortcuts"> 
-                <a href="proyek_list.html" class="shortcut" style="width: 100%;">
+                <a href="client_list.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-list-alt"></i>
                   <span class="shortcut-label">List</span> 
                 </a>
               </div>
               <!-- /shortcuts -->
               <div class="shortcuts"> 
-                <a href="proyek_new.html" class="shortcut" style="width: 100%;">
+                <a href="client_new.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-file"></i>
                   <span class="shortcut-label">New</span> 
-                </a>
-              </div>
-              <div class="shortcuts"> 
-                <a href="vendor_list.html" class="shortcut" style="width: 100%;">
-                  <i class="shortcut-icon icon-reply"></i>
-                  <span class="shortcut-label">Vendor</span> 
-                </a>
-              </div>
-              <div class="shortcuts"> 
-                <a href="client_list.html" class="shortcut" style="width: 100%;">
-                  <i class="shortcut-icon icon-share-alt"></i>
-                  <span class="shortcut-label">Client</span> 
-                </a>
-              </div>
-              <div class="shortcuts"> 
-                <a href="barang_list.html" class="shortcut" style="width: 100%;">
-                  <i class="shortcut-icon icon-hdd"></i>
-                  <span class="shortcut-label">Barang</span> 
                 </a>
               </div>
               <!-- /shortcuts --> 
@@ -182,16 +154,6 @@
                     <td>&#10004;</td>
                     <td class="td-actions"><a href="client_edit.html" class="btn btn-small btn-success" title="edit"><i class="btn-icon-only icon-pencil"> </i></a><a href="client_list_submit_delete.html" class="btn btn-danger btn-small" title="delete"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
-                  <tr>
-                    <td> 5 </td>
-                    <td> Client 5 </td>
-                    <td> Jakarta 5 </td>
-                    <td> CP 5 </td>
-                    <td> +628xxxxx </td>
-                    <td> client_5@email.com </td>
-                    <td>-</td>
-                    <td class="td-actions"><a href="client_edit.html" class="btn btn-small btn-success" title="edit"><i class="btn-icon-only icon-pencil"> </i></a><a href="client_list_submit_delete.html" class="btn btn-danger btn-small" title="delete"><i class="btn-icon-only icon-remove"> </i></a></td>
-                  </tr>
                 
                 </tbody>
               </table>
@@ -228,5 +190,10 @@
 <!-- Placed at the end of the document so the pages load faster --> 
 <script src="assets/js/jquery-1.7.2.min.js"></script> 
 <script src="assets/js/bootstrap.js"></script>
+<script type="text/javascript">
+  setTimeout(function() {
+    $('#notice_info').hide();
+  }, 2000);
+</script>
 </body>
 </html>
