--- a/penjualan_grafik.html
+++ b/penjualan_grafik.html
@@ -47,10 +47,7 @@
   <div class="subnavbar-inner">
     <div class="container">
       <ul class="mainnav">
-        <li class="active"><a href="vendor_list.html"><i class="icon-dashboard"></i><span>Vendor</span> </a> </li>
-        <li><a href="client_list.html"><i class="icon-list-alt"></i><span>Client</span> </a> </li>
-        <li><a href="barang_list.html"><i class="icon-suitcase"></i><span>Barang</span> </a></li>
-        <li><a href="proyek_list.html"><i class="icon-road"></i><span>Proyek</span></a></li>
+        <li class="active"><a href="proyek_list.html"><i class="icon-road"></i><span>Proyek</span></a></li>
         <li><a href="karyawan_list.html"><i class="icon-user"></i><span>Karyawan</span></a></li>
         <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-male"></i><span>Manajemen User</span> <b class="caret"></b></a>
           <ul class="dropdown-menu">
