--- a/karyawan_list.html
+++ b/karyawan_list.html
@@ -134,56 +134,91 @@
               <table class="table table-striped table-bordered">
                 <thead>
                   <tr>
+                    <th> No. </th>
                     <th> Nama </th>
                     <th> Alamat</th>
                     <th> Tempat Tanggal Lahir</th>
-                    <th> Status</th>
+                    <th> Telepon</th>
                     <th> Posisi</th>
+                    <th> Jabatan</th>
+                    <th> Status Pernikahan</th>
+                    <th> Status Karyawan</th>
                     <th class="td-actions"> </th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
+                    <td> 1. </td>
                     <td> Ronaldinho </td>
                     <td> Jl. Brazil </td>
                     <td> Brazil, 10 Januari 1945 </td>
-                    <td> Single </td>
-                    <td> Dept. Keuangan </td>
+                    <td> 081208120812 </td>
+                    <td> Operator Folklift </td>
+                    <td> Staff </td>
+                    <td> Menikah </td>
+                    <td> Kontrak </td>
                     <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                   <tr>
+                    <td> 2. </td>
                     <td> Ronaldinho </td>
                     <td> Jl. Brazil </td>
                     <td> Brazil, 10 Januari 1945 </td>
-                    <td> Single </td>
-                    <td> Dept. Keuangan </td>
+                    <td> 081208120812 </td>
+                    <td> Operator Folklift </td>
+                    <td> Supervisor </td>
+                    <td> Menikah </td>
+                    <td> Kontrak </td>
                     <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                   <tr>
+                    <td> 3. </td>
                     <td> Ronaldinho </td>
                     <td> Jl. Brazil </td>
                     <td> Brazil, 10 Januari 1945 </td>
-                    <td> Single </td>
-                    <td> Dept. Keuangan </td>
+                    <td> 081208120812 </td>
+                    <td> Operator Folklift </td>
+                    <td> Manager Operasional </td>
+                    <td> Menikah </td>
+                    <td> Kontrak </td>
                     <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                   <tr>
+                    <td> 4. </td>
                     <td> Ronaldinho </td>
                     <td> Jl. Brazil </td>
                     <td> Brazil, 10 Januari 1945 </td>
-                    <td> Single </td>
-                    <td> Dept. Keuangan </td>
+                    <td> 081208120812 </td>
+                    <td> Operator Folklift </td>
+                    <td> Staff </td>
+                    <td> Menikah </td>
+                    <td> Kontrak </td>
                     <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                   <tr>
+                    <td> 5. </td>
                     <td> Ronaldinho </td>
                     <td> Jl. Brazil </td>
                     <td> Brazil, 10 Januari 1945 </td>
-                    <td> Single </td>
-                    <td> Dept. Keuangan </td>
+                    <td> 081208120812 </td>
+                    <td> Operator Folklift </td>
+                    <td> Staff </td>
+                    <td> Menikah </td>
+                    <td> Kontrak </td>
                     <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
-                
+                  <tr>
+                    <td> 6. </td>
+                    <td> Ronaldinho </td>
+                    <td> Jl. Brazil </td>
+                    <td> Brazil, 10 Januari 1945 </td>
+                    <td> 081208120812 </td>
+                    <td> Operator Folklift </td>
+                    <td> Staff </td>
+                    <td> Menikah </td>
+                    <td> Kontrak </td>
+                    <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
+                  </tr>
                 </tbody>
               </table>
             </div>
