--- a/karyawan_absen.html
+++ b/karyawan_absen.html
@@ -127,66 +127,74 @@
         <div class="span10">
           <div class="widget widget-table action-table">
             <div class="widget-header"> <i class="icon-th-list"></i>
-              <h3>Rekap Absen Karyawan</h3>
+              <h3>Rekapitulasi Absen Karyawan</h3>
             </div>
             <!-- /widget-header -->
-            <!-- <div class="widget-content">
+            <div class="widget-content">
               <table class="table table-striped table-bordered">
                 <thead>
                   <tr>
+                    <th> No. </th>
                     <th> Nama </th>
-                    <th> Alamat</th>
-                    <th> Tempat Tanggal Lahir</th>
-                    <th> Status</th>
                     <th> Posisi</th>
-                    <th class="td-actions"> </th>
+                    <th> Jabatan</th>
+                    <th> Status Karyawan</th>
+                    <th> Tanggal</th>
+                    <th colspan="2">Pagi</th>
+                    <th colspan="2">Siang</th>
+                    <th colspan="2">Lembur</th>
+                    <th class="td-actions"> Action</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
+                    <td> 1. </td>
                     <td> Ronaldinho </td>
-                    <td> Jl. Brazil </td>
-                    <td> Brazil, 10 Januari 1945 </td>
-                    <td> Single </td>
-                    <td> Dept. Keuangan </td>
+                    <td> Operator Folklift </td>
+                    <td> Staff </td>
+                    <td> Kontrak </td>
+                    <td> 17 Januari 2016 </td>
+                    <td> 09.00</td>
+                    <td> 17.00 </td>
+                    <td> -</td>
+                    <td> -</td>
+                    <td> -</td>
+                    <td> -</td>
                     <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                   <tr>
+                    <td> 2. </td>
                     <td> Ronaldinho </td>
-                    <td> Jl. Brazil </td>
-                    <td> Brazil, 10 Januari 1945 </td>
-                    <td> Single </td>
-                    <td> Dept. Keuangan </td>
+                    <td> Operator Folklift </td>
+                    <td> Staff </td>
+                    <td> Kontrak </td>
+                    <td> 17 Januari 2016 </td>
+                    <td> 09.00</td>
+                    <td> -</td>
+                    <td> -</td>
+                    <td> -</td>
+                    <td> -</td>
+                    <td> 21.00</td>
                     <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
                   <tr>
+                    <td> 3. </td>
                     <td> Ronaldinho </td>
-                    <td> Jl. Brazil </td>
-                    <td> Brazil, 10 Januari 1945 </td>
-                    <td> Single </td>
-                    <td> Dept. Keuangan </td>
+                    <td> Operator Folklift </td>
+                    <td> Staff </td>
+                    <td> Kontrak </td>
+                    <td> 17 Januari 2016 </td>
+                    <td> 09.00</td>
+                    <td> - </td>
+                    <td> -</td>
+                    <td> -</td>
+                    <td> -</td>
+                    <td> 20.00</td>
                     <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
-                  <tr>
-                    <td> Ronaldinho </td>
-                    <td> Jl. Brazil </td>
-                    <td> Brazil, 10 Januari 1945 </td>
-                    <td> Single </td>
-                    <td> Dept. Keuangan </td>
-                    <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
-                  </tr>
-                  <tr>
-                    <td> Ronaldinho </td>
-                    <td> Jl. Brazil </td>
-                    <td> Brazil, 10 Januari 1945 </td>
-                    <td> Single </td>
-                    <td> Dept. Keuangan </td>
-                    <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
-                  </tr>
-                
                 </tbody>
               </table>
-            </div> -->
+            </div>
             <!-- /widget-content --> 
           </div>
           <!-- /widget -->
