--- a/karyawan_pph_21.html
+++ b/karyawan_pph_21.html
@@ -124,66 +124,51 @@
           <!-- /widget -->
         </div>
         <!-- /span4 -->
-        <div class="span10">
+        <div class="span12">
           <div class="widget widget-table action-table">
             <div class="widget-header"> <i class="icon-th-list"></i>
-              <h3>Laporan Pajak PPh 21 Karyawan</h3>
+              <h3>Gaji Karyawan</h3>
             </div>
             <!-- /widget-header -->
-            <!-- <div class="widget-content">
+            <div class="widget-content">
               <table class="table table-striped table-bordered">
                 <thead>
                   <tr>
+                    <th> No. </th>
                     <th> Nama </th>
-                    <th> Alamat</th>
-                    <th> Tempat Tanggal Lahir</th>
-                    <th> Status</th>
+                    <th> Status Karyawan</th>
                     <th> Posisi</th>
+                    <th> Gaji Bruto</th>
+                    <th> Pengurang Biaya Jabatan</th>
+                    <th> Ph Neto</th>
+                    <th> Ph Neto Disetahunkan</th>
+                    <th> Kategori PTKP</th>
+                    <th> PTKP Setahun</th>
+                    <th> PKP</th>
+                    <th> PPh Setahun</th>
+                    <th> PPh Sebulan (5%)</th>
+                    <th> Tidak punya NPWP (6%)</th>
                     <th class="td-actions"> </th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
+                    <td> 1. </td>
                     <td> Ronaldinho </td>
-                    <td> Jl. Brazil </td>
-                    <td> Brazil, 10 Januari 1945 </td>
-                    <td> Single </td>
-                    <td> Dept. Keuangan </td>
+                    <td> Tetap </td>
+                    <td> Staff </td>
+                    <td> 5.000.000 </td>
+                    <td> 250.000 </td>
+                    <td> 4.750.000 </td>
+                    <td> 57.000.000 </td>
+                    <td> K-1 </td>
+                    <td> 42.000.000 </td>
+                    <td> 15.000.000 </td>
+                    <td> 750.000 </td>
+                    <td> 62.500 </td>
+                    <td> 75.000 </td>
                     <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
-                  <tr>
-                    <td> Ronaldinho </td>
-                    <td> Jl. Brazil </td>
-                    <td> Brazil, 10 Januari 1945 </td>
-                    <td> Single </td>
-                    <td> Dept. Keuangan </td>
-                    <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
-                  </tr>
-                  <tr>
-                    <td> Ronaldinho </td>
-                    <td> Jl. Brazil </td>
-                    <td> Brazil, 10 Januari 1945 </td>
-                    <td> Single </td>
-                    <td> Dept. Keuangan </td>
-                    <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
-                  </tr>
-                  <tr>
-                    <td> Ronaldinho </td>
-                    <td> Jl. Brazil </td>
-                    <td> Brazil, 10 Januari 1945 </td>
-                    <td> Single </td>
-                    <td> Dept. Keuangan </td>
-                    <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
-                  </tr>
-                  <tr>
-                    <td> Ronaldinho </td>
-                    <td> Jl. Brazil </td>
-                    <td> Brazil, 10 Januari 1945 </td>
-                    <td> Single </td>
-                    <td> Dept. Keuangan </td>
-                    <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
-                  </tr>
-                
                 </tbody>
               </table>
             </div> -->
