--- a/wajib_pajak.html
+++ b/wajib_pajak.html
@@ -48,24 +48,31 @@
     <div class="subnavbar-inner">
       <div class="container">
         <ul class="mainnav">
-            <li><a href="proyek_list.html"><i class="icon-road"></i><span>Proyek</span></a></li>
-            <li><a href="karyawan_list.html"><i class="icon-user"></i><span>Karyawan</span></a></li>
-            <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-male"></i><span>Manajemen User</span> <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="pengguna.html">Pengguna</a></li>
-                <li><a href="wajib_pajak.html">Data Wajib Pajak Pribadi & Badan</a></li>
-                <li><a href="user_level.html">User Level</a></li>
-                      <!-- <li><a href="login.html">Login</a></li>
-                      <li><a href="signup.html">Signup</a></li>
-                      <li><a href="error.html">404</a></li> -->
-              </ul>
-            </li>
-            <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-bar-chart"></i><span>Laporan</span> <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                    <li><a href="pembelian_list.html">Pembelian</a></li>
-                    <li><a href="penjualan_list.html">Penjualan</a></li>
-                </ul>
-            </li>
+          <li><a href="proyek_list.html"><i class="icon-road"></i><span>Proyek</span></a></li>
+          <li><a href="karyawan_list.html"><i class="icon-user"></i><span>Karyawan</span></a></li>
+          <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-male"></i><span>Manajemen User</span> <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="pengguna.html">Pengguna</a></li>
+              <li><a href="wajib_pajak.html">Data Wajib Pajak Pribadi & Badan</a></li>
+              <li><a href="user_level.html">User Level</a></li>
+              <!-- <li><a href="login.html">Login</a></li>
+              <li><a href="signup.html">Signup</a></li>
+              <li><a href="error.html">404</a></li> -->
+            </ul>
+          </li>
+          <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-bar-chart"></i><span>Laporan</span> <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="pembelian_list.html">Pembelian</a></li>
+              <li><a href="penjualan_list.html">Penjualan</a></li>
+            </ul>
+          </li>
+          <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-list-ul"></i><span>Daftar</span> <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="daftar_akun.html">Daftar Akun</a></li>
+              <li><a href="mata_uang.html">Mata Uang</a></li>
+              <li><a href="departemen.html">Departemen</a></li>
+            </ul>
+          </li>
         </ul>
       </div>
       <!-- /container --> 
