--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <ul class="mainnav">
                     <li><a href="proyek_dashboard.html"><i class="icon-road"></i><span>Proyek</span></a></li>
                     <li><a href="karyawan_list.html"><i class="icon-user"></i><span>Karyawan</span></a></li>
-                    <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-male"></i><span>Manajemen User</span> <b class="caret"></b></a>
+                    <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-cogs"></i><span>Setting</span> <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="pengguna.html">Pengguna</a></li>
                             <li><a href="wajib_pajak.html">Data Wajib Pajak Pribadi & Badan</a></li>
