--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                     </li>
                     <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-bar-chart"></i><span>Laporan</span> <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="pembelian_list.html">Pembelian</a></li>
-                            <li><a href="penjualan_list.html">Penjualan</a></li>
+                            <li><a href="pembelian.html">Pembelian</a></li>
+                            <li><a href="penjualan.html">Penjualan</a></li>
                         </ul>
                     </li>
                     <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-list-ul"></i><span>Daftar</span> <b class="caret"></b></a>
