--- a/pembelian.html
+++ b/pembelian.html
@@ -147,7 +147,7 @@
           <div class="widget">
             <div class="widget-content">
               <div class="shortcuts"> 
-                <a href="pembelian_list.html" class="shortcut" style="width: 100%;">
+                <a href="kwitansi_list.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-file"></i>
                   <span class="shortcut-label">Kwitansi</span> 
                 </a>
