--- a/index.html
+++ b/index.html
@@ -74,6 +74,14 @@
                     <li><a href="pembelian.html"><i class="icon-chevron-sign-left"></i><span>Pembelian</span></a></li>
                     <li><a href="penjualan.html"><i class="icon-chevron-sign-right"></i><span>Penjualan</span></a></li>
                     <li><a href="proyek_dashboard.html"><i class="icon-road"></i><span>Proyek</span></a></li>
+                    <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-puzzle-piece"></i><span>Pabrikasi</span> <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Bahan Baku</a></li>
+                            <li><a href="#">Biaya Produksi</a></li>
+                            <li><a href="#">Formula Produk</a></li>
+                            <li><a href="#">Pengeluaran Bahan Baku</a></li>
+                            <li><a href="#">Produk & Bahan Baku Keluaran</a></li>
+                        </ul>
                     <li><a href="laporan_keuangan.html"><i class="icon-paste"></i><span>Laporan</span></a></li>
                     <li><a href="karyawan_list.html"><i class="icon-user"></i><span>Karyawan</span></a></li>
                 </ul>
