--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         rel="stylesheet">
     <link href="assets/css/font-awesome.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -50,6 +51,7 @@
                             <li><a href="pengguna.html">Pengguna</a></li>
                             <li><a href="wajib_pajak.html">Data Wajib Pajak Pribadi & Badan</a></li>
                             <li><a href="user_level.html">User Level</a></li>
+                            <li><a href="user_level.html">Info Perusahaan</a></li>
                             <!-- <li><a href="login.html">Login</a></li>
                             <li><a href="signup.html">Signup</a></li>
                             <li><a href="error.html">404</a></li> -->
@@ -59,6 +61,17 @@
                         <ul class="dropdown-menu">
                             <li><a href="departemen.html">Departemen</a></li>
                             <li><a href="daftar_aktiva_tetap.html">Aset Tetap</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="fa fa-credit-card"></i><span>Kas Bank</span> <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Penerimaan</a></li>
+                            <li><a href="#">Pembayaran</a></li>
+                            <li><a href="#">Buku Bank</a></li>
+                            <li><a href="#">Rekonsiliasi Bank</a></li>
+                            <!-- <li><a href="login.html">Login</a></li>
+                            <li><a href="signup.html">Signup</a></li>
+                            <li><a href="error.html">404</a></li> -->
                         </ul>
                     </li>
                     <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-book"></i><span>Buku Besar</span> <b class="caret"></b></a>
